[tool.poetry]
name = "pbench-common"
version = "0.1.0"
description = "Common pbench Python classes shared with Agent and Server"
authors = ["Pbench Team <pbench-team@redhat.com>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"

[tool.poetry.group.test.dependencies]
coverage = {version = "<6.3", extras = ["toml"]}
filelock = "<3.8"
pytest = ">=6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
cover_pylib = false
parallel = true
relative_files = true

[tool.isort]
profile = "black"                 # black-compatible (e.g., trailing comma)
known_first_party = ["pbench"]    # separate "pbench" section
multi_line_output = 3             # "hanging" indent with dedented paren
force_sort_within_sections = true # don't separate import vs from
order_by_type = false             # sort alphabetic regardless of case

[tool.black]
skip-string-normalization = false
